[package]
name = "DevMagicly-Advertising-Plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Discord deps
twilight-gateway = "0.7.1" 
twilight-model = "0.7.1"
twilight-cache-inmemory = "0.7.1"
twilight-http = "0.7.1"

futures = "0.3"
tracing-subscriber = "0.2"
tracing = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"

# Database
sled = "0.34.7"
serde = "1.0.130"